--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -7,15 +7,14 @@ nav.navbar.navbar-expand-lg.navbar-dark.sticky-top.header
         a.nav-link(href='/')
           | Home 
           span.sr-only (current)
-      li.nav-item
-        a.nav-link(href='/myaccount') My Account
-      li.nav-item
-        a.nav-link(href='/customers') Customers
-      li.nav-item
-      li.nav-item
-        a.nav-link(href='/accounts') Accounts
-      li.nav-item
-        a.nav-link(href='/addNew') Add New
+      if true
+        li.nav-item
+          a.nav-link(href='/customers') Customers
+        li.nav-item
+        li.nav-item
+          a.nav-link(href='/accounts') Accounts
+        li.nav-item
+          a.nav-link(href='/addNew') Add New
     form.form-inline.my-2.my-lg-0(action='/myaccount')
       input.form-control.mr-sm-2(name='id' type='search', placeholder='Your ID', aria-label='Search')
       button.btn.btn-outline-warning.my-2.my-sm-0(type='submit') Get Info
