--- a/views/admin/account.pug
+++ b/views/admin/account.pug
@@ -7,7 +7,7 @@ block css
 block content
     include ../includes/modal.pug
     .container      
-        form#form
+        form.cform#account-form
             .container.register-form
                 .note
                     p Create New Account
@@ -30,7 +30,7 @@ block content
                             .form-group
                                 input.form-control(name='acn' type='text', readonly, placeholder='Account Number', value='' id='acn')
                             
-                    button.btnSubmit(type='button' onclick='postAccount()') Submit
+                    button.btnSubmit(type='submit') Submit
     block js
         script
             include ../res/js/form.js
