--- a/views/admin/customer.pug
+++ b/views/admin/customer.pug
@@ -1,13 +1,12 @@
 extends ../base/main.pug
 
 block css
-    include ../res/css/form.css
     include ../res/css/loader.css
-
+    include ../res/css/form.css
 block content
     include ../includes/modal.pug
     .container
-        form#form
+        form.cform#customer-form
             .container.register-form
                 .note
                     p Create New Customer
@@ -28,7 +27,6 @@ block content
                             .form-group
                                 input.form-control(name='id' type='text', placeholder='Customer ID', value='' id='id')
                             
-                    button.btnSubmit(type='button' onclick='postForm("customer")') Submit
-    block js
-        script
-            include ../res/js/form.js
+                    button.btnSubmit(type='submit') Submit
+    script
+        include ../res/js/form.js
