Every primary feature work

--- a/views/admin/customer.pug
+++ b/views/admin/customer.pug
@@ -22,10 +22,10 @@ block content
                                 input.form-control(name='address' type='text', placeholder='Address', value='' id='address')
                             .form-group
                                 input.form-control(name='date' type='date', placeholder='Account Opening Date', value='' id='date')
-                    .row
-                        .col
-                            .form-group
-                                input.form-control(name='id' type='text', placeholder='Customer ID', value='' id='id')
+                    //- .row
+                    //-     .col
+                    //-         .form-group
+                    //-             input.form-control(name='id' type='text', placeholder='Customer ID', value='' id='id')
                             
                     button.btnSubmit(type='submit') Submit
     script
