--- a/views/admin/customers.pug
+++ b/views/admin/customers.pug
@@ -2,8 +2,8 @@ extends ../base/main.pug
 
 block content
     .container
-        table.table.table-striped.table-bordered
-            tr
+        table.table.table-striped.table-bordered.table-responsive-sm
+            tr.header
                 th Name
                 th ID
                 th Phone
