--- a/views/admin/addNew.pug
+++ b/views/admin/addNew.pug
@@ -3,6 +3,9 @@ extends ../base/main.pug
 block content
     .container
         p.header Add New
-        a.btn.btn-primary(href='/addNew/customer') Add New Customer
-        a.btn.btn-primary(href='/addNew/account') Add New Account
-        a.btn.btn-primary(href='/addNew/deposit') Add New Deposit
+        hr
+        .container
+            .text-center
+                a.btn.btn-primary.btn-block(href='/addNew/customer') Add New Customer
+                a.btn.btn-warning.btn-block(href='/addNew/account') Add New Account
+                a.btn.btn-secondary.btn-block(href='/addNew/deposit') Add New Deposit
