--- a/views/admin/deposit.pug
+++ b/views/admin/deposit.pug
@@ -7,7 +7,7 @@ block css
 block content
     include ../includes/modal.pug
     .container
-        form#form
+        form.cform#deposit-form
             .container.register-form
                 .note
                     p Create New Deposit
@@ -28,12 +28,12 @@ block content
                     .row
                         .col-md-6
                             .form-group
-                                input.form-control(name='d-by' type='text', placeholder='Deposited By', value='' id='d-by')
+                                input.form-control(name='dBy' type='text', placeholder='Deposited By', value='' id='d-by')
                         .col-md-6
                             .form-group
-                                input.form-control(name='d-to' type='text', placeholder='Deposited To', value='' id='d-to')
+                                input.form-control(name='dTo' type='text', placeholder='Deposited To', value='' id='d-to')
                             
-                    button.btnSubmit(type='button' onclick='postDeposit()') Submit
+                    button.btnSubmit(type='submit') Submit
     block js
         script
             include ../res/js/form.js
