--- a/views/admin/customer.pug
+++ b/views/admin/customer.pug
@@ -16,17 +16,12 @@ block content
                             .form-group
                                 input.form-control(name='name' type='text', placeholder='Full Name *', value='' id='name')
                             .form-group
-                                input.form-control(name='phone' type='text', placeholder='Phone Number *', value='' id='phone')
+                                input.form-control(name='phone' type='text', placeholder='Phone Number *', value='01' id='phone' pattern="[0]{1}[1]{1}[1|3|5|6|7|8|9]{1}[0-9]{8}")
                         .col-md-6
                             .form-group
                                 input.form-control(name='address' type='text', placeholder='Address', value='' id='address')
                             .form-group
                                 input.form-control(name='date' type='date', placeholder='Account Opening Date', value='' id='date')
-                    //- .row
-                    //-     .col
-                    //-         .form-group
-                    //-             input.form-control(name='id' type='text', placeholder='Customer ID', value='' id='id')
-                            
                     button.btnSubmit(type='submit') Submit
     script
         include ../res/js/form.js
