--- a/views/admin/deposit.pug
+++ b/views/admin/deposit.pug
@@ -15,7 +15,8 @@ block content
                     .row
                         .col-md-6
                             .form-group
-                                select.form-control(name='account', id='account')
+                                select.form-control(name='account', id='account' onchange='myFunction(event)')
+                                    option(hidden selected disabled) Choose account
                                     each n in accounts
                                         option=`${n.name} - ${n.acn}`
                         .col-md-6
@@ -31,9 +32,16 @@ block content
                                 input.form-control(name='dBy' type='text', placeholder='Deposited By', value='' id='d-by')
                         .col-md-6
                             .form-group
-                                input.form-control(name='dTo' type='text', placeholder='Deposited To', value='' id='d-to')
+                                select.form-control(name='dTo' type='text', placeholder='Deposited To', value='' id='d-to')
+                                    option Nurul Huda
+                                    option Asik Ahmed
                             
                     button.btnSubmit(type='submit') Submit
     block js
         script
             include ../res/js/form.js
+        script.
+            function myFunction(e) {
+                document.getElementById("d-by").value = e.target.value.split(' - ')[0]
+            }
+            
