--- a/views/res/css/main.css
+++ b/views/res/css/main.css
@@ -6,3 +6,12 @@
     color: #fff;
     font-weight: bold;
 }
+input:valid {
+    color: green;
+  }
+  input:invalid {
+    color: red;
+  }
+a:active {
+    color:red;
+}
