--- a/views/admin/includes/customer.pug
+++ b/views/admin/includes/customer.pug
@@ -14,4 +14,8 @@ form.cform#customer-form
                         input.form-control(name='address' type='text', placeholder='Address', value='' id='address')
                     .form-group
                         input.form-control(name='date' type='date', placeholder='Account Opening Date', value='' id='date')
+            .row  
+                .col
+                    .form-group
+                        input.form-control(name='email' type='email', placeholder='Email', value='' id='email')
             button.btnSubmit(type='submit') Submit
