--- a/views/user/account.pug
+++ b/views/user/account.pug
@@ -3,7 +3,7 @@ extends ../base/main.pug
 block content
   -let n = result
   .container.text-center
-    h3 Your Accounts
+    h3 Your Account
     table.table.table-striped.table-bordered.table-responsive-sm
         tr.header
             th Name
@@ -16,12 +16,12 @@ block content
             td
                 h5=n.current+' Taka'
             td=n.total+' Taka'
+    h6='Last Updated: '+n.lastUpdated.toDateString()
     br
     h3 Your Deposits
     table.table.table-striped.table-bordered.table-responsive-sm
       tr.header
         th Date
-        th Tag
         th Deposited To
         th Deposited By
         th Amount
@@ -29,7 +29,6 @@ block content
           each n in result.deposits
             tr
               td=n.date.toDateString()
-              td "test"
               td=n.dTo
               td=n.dBy
               td
