--- a/views/user/customer.pug
+++ b/views/user/customer.pug
@@ -25,6 +25,7 @@ block content
         th ACN
         th Current
         th Total
+        th Updated
         if result.accounts.length != 0
           each n in result.accounts
             tr
@@ -33,6 +34,7 @@ block content
               td
                   h5=n.current+' Taka'
               td=n.total+' Taka'
+              td=n.lastUpdated.toDateString()
         else
           tr
             td(colspan='4') No accounts yet
