--- a/views/admin/accounts.pug
+++ b/views/admin/accounts.pug
@@ -18,6 +18,12 @@ block content
                             h5=n.current+' Taka'
                         td=n.total+' Taka'
                         td=n.lastUpdated.toDateString()
+                - class Accounts extends Array { sum(key) {return this.reduce((a, b) => a + (b[key] || 0), 0);}}
+                - const accountsTotalCurrent = new Accounts(...accounts);
+                
+                tr.header
+                    td(colspan='5')
+                        h3=`Total ${accountsTotalCurrent.sum('current')} Taka`
             else
                 tr
-                    td(colspan='4') No accounts yet
+                    td(colspan='5') No accounts yet
