--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -7,6 +7,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.sticky-top.header
         a.nav-link(href='/')
           | Home 
           span.sr-only (current)
+        li.nav-item
+          a.nav-link(href='/login.html') Login
       if true
         li.nav-item
           a.nav-link(href='/customers') Customers
