added better admin panel

--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -13,6 +13,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.sticky-top.header
         li.nav-item
           a.nav-link(href='/customers') Customers
         li.nav-item
+          a.nav-link(href='/statistics.html') Statistics
+        li.nav-item
         li.nav-item
           a.nav-link(href='/accounts') Accounts
         li.nav-item
