--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -8,8 +8,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.sticky-top.header
           | Home 
           span.sr-only (current)
         li.nav-item
-          a.nav-link(href='/login.html') Login
-      if true
+          a.nav-link(href='/admin') Admin
+      if false
         li.nav-item
           a.nav-link(href='/customers') Customers
         li.nav-item
