--- a/views/admin/customers.pug
+++ b/views/admin/customers.pug
@@ -8,6 +8,7 @@ block content
                 th ID
                 th Phone
                 th Address
+                th Email
                 th Join Date
             if customers.length != 0
                 each n in customers
@@ -16,6 +17,10 @@ block content
                         td=n.id
                         td=n.phone
                         td=n.address
+                        if n.email
+                            td=n.email
+                        if !n.email
+                            td No Email
                         td=n.date.toDateString()
             else
                 tr
