--- a/views/user/account.pug
+++ b/views/user/account.pug
@@ -6,16 +6,25 @@ block content
     h3 Your Account
     table.table.table-striped.table-bordered.table-responsive-sm
         tr.header
-            th Name
-            th ACN
-            th Current
-            th Total
+          th Name
+          th ACN
+          th Current
+          th Min
+          th Total
+          th Status
         tr
-            td=n.name
-            td=n.acn
-            td
-                h5=n.current+' Taka'
-            td=n.total+' Taka'
+          td=n.name
+          td=n.acn
+          td
+              h5=n.current+' Taka'
+          td=n.min+' Taka'
+          td=n.total+' Taka'
+          if n.matured && n.withdrawn
+            td Withdrawn
+          if n.matured && !n.withdrawn
+              td Matured
+          if !n.matured && !n.withdrawn
+              td Running
     h6='Last Updated: '+n.lastUpdated.toDateString()
     br
     h3 Your Deposits
