--- a/views/user/customer.pug
+++ b/views/user/customer.pug
@@ -10,12 +10,17 @@ block content
         th ID
         th Phone
         th Address
+        th Email
         th Join Date
       tr
         td=n.name
         td=n.id
         td=n.phone
         td=n.address
+        if n.email
+          td=n.email
+        if !n.email
+          td No Email
         td=n.date.toDateString()
     br
     h3 Your Accounts
@@ -24,7 +29,9 @@ block content
         th Name
         th ACN
         th Current
+        th Min
         th Total
+        th Status
         th Updated
         if result.accounts.length != 0
           each n in result.accounts
@@ -33,7 +40,14 @@ block content
               td=n.acn
               td
                   h5=n.current+' Taka'
+              td=n.min+' Taka'
               td=n.total+' Taka'
+              if n.matured && n.withdrawn
+                td Withdrawn
+              if n.matured && !n.withdrawn
+                  td Matured
+              if !n.matured && !n.withdrawn
+                  td Running
               td=n.lastUpdated.toDateString()
         else
           tr
