--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,15 +1,26 @@
-html,
-body,
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Raleway", sans-serif;
+.loader {
+  /* margin: 0 auto; */
+  border: 16px solid #ff5858; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  
 }
-.w3-quarter:hover {
-  cursor: pointer;
-  box-shadow: 0 0 9px 0px black;
+​.center-container {
+  position: fixed;
+  z-index: 99999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ebebeb;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 input {
   border: solid 1px darkseagreen;
@@ -18,4 +29,13 @@ input {
   text-align: center;
   /* font-weight: bold; */
   border: 3px;
+}
+.info-container{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 10px;
+  text-align: center;
+    padding-top: 16px;
+  /* border: 2px solid black; */
 }
