--- a/views/user/home.pug
+++ b/views/user/home.pug
@@ -14,6 +14,10 @@ block content
                 span.input-group-append
                     button.btn.btn-warning(type='submit' style='width:80px') Get
         h5.header.rounded-bottom Enter Your ID or ACN to Get Info
+        br
+        h4.header.rounded-bottom.bg-lg-info= 'Total Accounts: '+info.accountCount
+        h4.header.rounded-bottom.bg-lg-warning= 'Total Customers: '+info.customerCount
+        h4.header.rounded-bottom.bg-lg-.bg-lg-danger= 'Total Money Stored: '+info.totalCurrent+' Taka'
 
 
 
