--- a/views/user/home.pug
+++ b/views/user/home.pug
@@ -16,8 +16,8 @@ block content
         h5.header.rounded-bottom Enter Your ID or ACN to Get Info
         br
         h4.header.rounded-bottom.bg-lg-info= 'Total Accounts: '+info.accountCount
-        h4.header.rounded-bottom.bg-lg-warning= 'Total Customers: '+info.customerCount
-        h4.header.rounded-bottom.bg-lg-.bg-lg-danger= 'Total Money Stored: '+info.totalCurrent+' Taka'
+        h4.header.rounded-bottom.bg-lg-danger= 'Total Customers: '+info.customerCount
+        h4.header.rounded-bottom.bg-info= 'Total Money Stored: '+info.totalCurrent+' Taka'
 
 
 
