--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -39,3 +39,21 @@ input {
     padding-top: 16px;
   /* border: 2px solid black; */
 }
+
+
+.header {
+  text-align: center;
+  padding: .5rem 1rem;
+  background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+  color: #fff;
+  font-weight: bold;
+}
+.bg-lg-info {
+background: -webkit-linear-gradient(left, #f03db4, #86d420);
+}
+.bg-lg-warning {
+background: -webkit-linear-gradient(left, #99aa00, #324e0c);
+}
+.bg-lg-danger {
+background: -webkit-linear-gradient(left, #ff0808, #86d420);
+}
