added fb messanger

--- a/views/base/main.pug
+++ b/views/base/main.pug
@@ -14,6 +14,24 @@ html(lang='en')
       include ../res/css/main.css
     title Bank-PONSRIK
   body
+    #fb-root
+    script.
+      window.fbAsyncInit = function() {
+      FB.init({
+      xfbml            : true,
+      version          : 'v3.3'
+      });
+      };
+      (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    // Your customer chat code
+    .fb-customerchat(attribution='setup_tool', page_id='314676126112441', theme_color='#13cf13')
+
     br
     block content
         h1 There is nothing for now!
