--- a/public/admin-beta/partial/accountsTable.html
+++ b/public/admin-beta/partial/accountsTable.html
@@ -19,6 +19,8 @@
             <th>Min</th>
             <th>Date Created</th>
             <th>Balance</th>
+            <th>Age</th>
+            <th>Progress</th>
             <th>Status</th>
           </tr>
         </thead>
